Fixed CSS `padding-top` on mobile

--- a/home/static/css/text_page.css
+++ b/home/static/css/text_page.css
@@ -3,8 +3,9 @@ body {
 }
 
 .content {
+    padding-top: 56px;
     background-color: #30f8ab;
-    min-height: calc(100vh - 16px);
+    min-height: calc(100vh - 66px);
     display: flex;
     flex-direction: column;
 }
